Fix for asl2-212, asl2-216

--- a/src/app/landing/landing.page.html
+++ b/src/app/landing/landing.page.html
@@ -12,13 +12,14 @@
       <label class="text">EDIT - Studente è l’app ufficiale della Provincia Autonoma di Trento per la gestione delle esperienze di alternanza scuola lavoro</label>
     </div>
     <br>
+    <br>
     <ion-button class="button" expand="full" fill="clear" (click)="signIn()">Login</ion-button>
-    <br>
-    <br>
-    <div padding>
+    <!-- <br> -->
+    <!-- <br> -->
+    <!-- <div padding>
       <label class="text2">Non hai un account attivo?</label><br><br>
       <label class="text3" (click)="signIn()">Crea nuovo account</label>
-    </div>
+    </div> -->
     
   </ion-grid>  
 </ion-content>
