--- a/src/app/landing/landing.page.scss
+++ b/src/app/landing/landing.page.scss
@@ -4,7 +4,7 @@ ion-content {
     .container {
         color: white;
         text-align: center;
-        font-family: Titillium Web;
+        // font-family: Titillium Web;
     
         .heading-1 {
             font-size: x-large;
