--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,28 +1,25 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 1
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 1 page"></app-explore-container>
-    <ion-button (click)="getProfile()">Get User Details</ion-button>
-    <ion-button (click)="signOut()">Sign Out</ion-button>
-  
-    <ion-card *ngIf="userInfo">
-      <ion-card-header>
-        User Info
-      </ion-card-header>
-      <ion-card-content>
-        {{userInfo | json}}
-      </ion-card-content>
-    </ion-card>
- </ion-content>
+  <ion-content [fullscreen]="true">
+    <br>
+    <br>
+    <ion-grid class="container">
+      <ion-row>
+        <ion-col size="6">
+          <ion-icon class="icon" name="md-contact"></ion-icon>
+        </ion-col>
+        <ion-col *ngIf="studente" size="6">
+          <ion-row><span class="titolo ion-text-uppercase">{{studente.name}} {{studente.surname}}</span></ion-row>
+          <ion-row><span class="titolo ion-text-uppercase">{{studente.classroom}}</span></ion-row>
+          <ion-row><span class="normal ion-text-capitalize">{{studente.istitutoName}}</span></ion-row>
+        </ion-col>
+      </ion-row>
+      <br>
+      <br>
+      <ion-row><span class="link">Settings (lingua, notifiche, ecc)</span></ion-row>
+      <br>
+      <ion-row><span class="link">Credits</span></ion-row>
+      <br>
+      <ion-row><span class="link">Help</span></ion-row>
+      <br>
+      <ion-row><span  class="link" (click)="signOut()">Logout</span></ion-row>
+    </ion-grid>
+  </ion-content>
