--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -2,16 +2,12 @@
 .container {
     color: #5C6F82;
     .titolo {
-       font-weight: 800;
-    }
-    .normal {
-        font-weight: 200;
+       font-size: 16px;
     }
     .icon {
         font-size: 100px;
     }
     .link {
         color: #0073E6;
-        font-weight: 700;
     }
 }
