--- a/src/global.scss
+++ b/src/global.scss
@@ -36,3 +36,11 @@
 .text-center {
     text-align: center;
 }
+
+.text-bold {
+    font-weight: bold;
+}
+
+.text-italic {
+    font-style: italic;
+}
