--- a/src/global.scss
+++ b/src/global.scss
@@ -30,11 +30,11 @@
 }
 
 .float-right {
-    float: right;
+    float: right!important;
 }
 
 .text-center {
-    text-align: center;
+    text-align: center!important;
 }
 
 .text-bold {
