--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,18 +2,18 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
-      <ion-icon class="icon" src="./assets/icon/it-user.svg"></ion-icon>
-      <ion-label>Profilo</ion-label>
+      <ion-icon src="./assets/icon/it-user.svg"></ion-icon>
+      <ion-label class="icon-label">Profilo</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon class="icon" src="./assets/icon/it-calendar.svg"></ion-icon>
-      <ion-label>Presenze</ion-label>
+      <ion-icon src="./assets/icon/it-calendar.svg"></ion-icon>
+      <ion-label class="icon-label">Presenze</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon class="icon" src="./assets/icon/it-folder.svg"></ion-icon>
-      <ion-label>Esperienze</ion-label>
+      <ion-icon src="./assets/icon/it-folder.svg"></ion-icon>
+      <ion-label class="icon-label">Esperienze</ion-label>
     </ion-tab-button>
 
   </ion-tab-bar>
