--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,37 +1,43 @@
+<ion-header class="header" sticky>
+  <ion-row *ngIf="summary">
+    <ion-col class="attributes-value" size="8">
+      <ion-row><span class="heading text-semibold">Le mie esperienze</span></ion-row>
+      <br>
+      <ion-row><span>Ore totali:&nbsp;</span><span>{{summary.oreValidate}}/{{summary.oreTotali}}</span></ion-row>
+      <br>
+      <br>
+      <ion-row><span>{{summary.esperienzeConcluse}}&nbsp;esperienze concluse</span></ion-row>
+      <br>
+      <br>
+      <ion-row><span>{{summary.esperienzeConcluse}}&nbsp;esperienze in corso</span></ion-row>
+    </ion-col>
+    <ion-col size="4">
+      <ion-row></ion-row>
+      <br>
+      <span class="sub-div-circle">
+        <circle-progress 
+        [percent]="percentage"
+        [radius]="100"
+        [outerStrokeWidth]="50"
+        [innerStrokeWidth]="50"
+        [space] = "-30"
+        [outerStrokeColor]="'#0073E6'"
+        [innerStrokeColor]="'#e7e8ea'"
+        [titleFontSize]= "40"
+        [unitsFontSize]= "30"
+        [showSubtitle] = "false"
+        [animation]="true"
+        [animationDuration]="300"
+        [startFromZero]="false"
+        [responsive]="true"
+        [subtitle]=""
+        [subtitleFontSize]="20"></circle-progress>
+      </span>
+    </ion-col>
+  </ion-row>
+</ion-header>
 <ion-content [fullscreen]="true">
  <ion-grid>
-    <ion-row *ngIf="summary">
-      <ion-col class="attributes-value" size="8">
-        <ion-row><span class="heading text-bold">Le mie esperienze</span></ion-row>
-        <br>
-        <ion-row><span>Ore totali:&nbsp;</span><span>{{summary.oreValidate}}/{{summary.oreTotali}}</span></ion-row>
-        <br>
-        <ion-row><span>{{summary.esperienzeConcluse}}&nbsp;esperienze concluse</span></ion-row>
-        <br>
-        <ion-row><span>{{summary.esperienzeConcluse}}&nbsp;esperienze in corso</span></ion-row>
-      </ion-col>
-      <ion-col size="4">
-        <span class="sub-div-circle">
-          <circle-progress 
-          [percent]="percentage"
-          [radius]="100"
-          [outerStrokeWidth]="50"
-          [innerStrokeWidth]="50"
-          [space] = "-30"
-          [outerStrokeColor]="'#0073E6'"
-          [innerStrokeColor]="'#e7e8ea'"
-          [titleFontSize]= "40"
-          [unitsFontSize]= "30"
-          [showSubtitle] = "false"
-          [animation]="true"
-          [animationDuration]="300"
-          [startFromZero]="false"
-          [responsive]="true"
-          [subtitle]=""
-          [subtitleFontSize]="20"></circle-progress>
-        </span>
-      </ion-col>
-    </ion-row>
     <ion-row>
       <ion-col>
         <ion-list>
@@ -40,23 +46,23 @@
               <ion-row>
                 <ion-col size="8"><span class="titolo ion-text-capitalize text-bold">{{esp.titolo}}</span></ion-col>
                 <ion-col size="4" class>
-                  <span class="float-right">
-                    <span class="stato text-bold">Stato:&nbsp;</span>
+                  <span class="float-right stato">
+                    <span class="text-semibold">Stato:&nbsp;</span>
                     <span [style.color]="esp.stato=='in_corso' ? '#00CF86' : '#D32F2F'">{{ getStatoNome(esp.stato) }}</span>
                   </span>                  
                 </ion-col>
               </ion-row>
               <ion-row>
-                <ion-col><span class="attributes text-bold">Ore svolte:&nbsp;</span><span
+                <ion-col><span class="attributes text-semibold">Ore svolte:&nbsp;</span><span
                     class="attributes-value">{{esp.oreValidate}}/{{esp.oreTotali}}</span></ion-col>
               </ion-row>
               <ion-row>
-                <ion-col><span class="attributes text-bold">Periodo:&nbsp;</span><span
+                <ion-col><span class="attributes text-semibold">Periodo:&nbsp;</span><span
                     class="attributes-value">{{esp.dataInizio | date: 'dd/MM/yyyy' }} -
                     {{esp.dataFine | date: 'dd/MM/yyyy' }}</span></ion-col>
               </ion-row>
               <ion-row *ngIf="esp.nomeEnte">
-                <ion-col><span class="attributes text-bold">Presso:&nbsp;</span><span class="attributes-value ion-text-capitalize">{{esp.nomeEnte}}</span>
+                <ion-col><span class="attributes text-semibold">Presso:&nbsp;</span><span class="attributes-value ion-text-capitalize">{{esp.nomeEnte}}</span>
                 </ion-col>
               </ion-row>
             </ion-grid>
