--- a/src/global.scss
+++ b/src/global.scss
@@ -26,7 +26,7 @@
 @import "~@ionic/angular/css/flex-utils.css";
 
 * {
-    font-family: 'Titillium Web';
+    font-family: "Titillium Web", sans-serif;
 }
 
 .float-right {
@@ -38,7 +38,11 @@
 }
 
 .text-bold {
-    font-weight: bold;
+    font-weight: 700;
+}
+
+.text-semibold {
+    font-weight: 600;
 }
 
 .text-italic {
