Fix for asl2-214

--- a/src/app/landing/landing.page.html
+++ b/src/app/landing/landing.page.html
@@ -2,7 +2,7 @@
   <ion-grid class="container">
     <br>
     <div padding>
-      <label class="heading-1">Benvenuto in EDIT</label>
+      <label class="heading-1 text-bold">Benvenuto in EDIT</label>
     </div>
     <div padding>
       <ion-icon class="icon" src="./assets/icon/landing-icon.svg"></ion-icon>
@@ -13,13 +13,12 @@
     </div>
     <br>
     <br>
-    <ion-button class="button" expand="full" fill="clear" (click)="signIn()">Login</ion-button>
+    <ion-button class="button text2" expand="full" fill="clear" (click)="signIn()">Login</ion-button>
     <!-- <br> -->
     <!-- <br> -->
     <!-- <div padding>
       <label class="text2">Non hai un account attivo?</label><br><br>
       <label class="text3" (click)="signIn()">Crea nuovo account</label>
     </div> -->
-    
   </ion-grid>  
 </ion-content>
