--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -3,13 +3,15 @@
     <br>
     <ion-grid class="container">
       <ion-row>
-        <ion-col size="6">
+        <ion-col size="4">
           <ion-icon class="icon" name="md-contact"></ion-icon>
         </ion-col>
-        <ion-col size="6">
-          <ion-row><span class="titolo text-bold ion-text-uppercase">{{dataService.studenteNome}} {{dataService.studenteCognome}}</span></ion-row>
-          <ion-row><span class="titolo text-bold ion-text-uppercase">{{dataService.classe}}</span></ion-row>
-          <ion-row><span class="ion-text-capitalize">{{dataService.istituto}}</span></ion-row>
+        <ion-col size="8">
+          <span class="float-right">
+            <ion-row><span class="titolo text-bold ion-text-capitalize">{{dataService.studenteNome}} {{dataService.studenteCognome}}</span></ion-row>
+            <ion-row><span class="titolo text-bold ion-text-capitalize">{{dataService.classe}}</span></ion-row>
+            <ion-row><span class="istituto ion-text-capitalize">{{dataService.istituto}}</span></ion-row>
+          </span>          
         </ion-col>
       </ion-row>
       <br>
