--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -2,12 +2,16 @@
 .container {
     color: #5C6F82;
     .titolo {
-       font-size: 16px;
+       font-size: 24px;
+    }
+    .istituto {
+        font-size: 16px;
     }
     .icon {
         font-size: 100px;
     }
     .link {
         color: #0073E6;
+        font-size: 17px;
     }
 }
