--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -22,6 +22,8 @@
       <br>
       <ion-row><span class="link">Help</span></ion-row>
       <br>
+      <ion-row><span class="link">Accessibilità</span></ion-row>
+      <br>
       <ion-row><span  class="link" (click)="signOut()">Logout</span></ion-row>
     </ion-grid>
   </ion-content>
