--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -6,17 +6,15 @@ ion-content {
         text-align: center;
     
         .heading-1 {
-            font-size: large;
-            font-weight: 900;
+            font-size: 28px;
         }
         
         .text {
-            font-size: large;
+            font-size: 18px;
         }
 
         .data {
-            font-size: x-large;
-            font-weight: 900;
+            font-size: 25px;
         }
     
         .icon {
@@ -56,7 +54,6 @@ ion-content {
         }
        
         .attributes {
-            font-weight: 600;
             font-size: 14px;
             color: #5C6F82;
         } 
@@ -64,11 +61,8 @@ ion-content {
         .attributes-value {
             color: #5C6F82;
             font-size: 14px;
-            font-weight: 200;
         }
     }
-
-
 
 }
 
