--- a/src/app/tab2/actions/gestione-presenze-gruppo/gestione-presenze-gruppo.page.html
+++ b/src/app/tab2/actions/gestione-presenze-gruppo/gestione-presenze-gruppo.page.html
@@ -31,29 +31,29 @@
     </ion-grid>
 </ion-header>
 <ion-content *ngIf="attivita && presenze">
-    <ion-grid>
+    <!-- <ion-grid> -->
             <ion-list class="item-container">
-                <div id="{{giorno.giornata}}" [class.disabled]="giorno.verificata" class="item" *ngFor="let giorno of presenze"
+                <div id="{{giorno.giornata}}" [class.disabled]="isInfuture(giorno) || giorno.verificata" class="item" *ngFor="let giorno of presenze"
                     (click)="showPicker(giorno)">
                     <ion-grid>
                         <ion-row>
                             <ion-col size="8">
                                 <ion-row>
-                                    <span 
+                                    <span  
                                         class="attributes ion-text-capitalize">{{ giorno.giornata | date: 'dd MMM' }} 
-                                        <span class="attributes ion-text-uppercase"> - {{ giorno.giornata | date: 'EEE' }}</span>
+                                        <span   class="attributes ion-text-uppercase"> - {{ giorno.giornata | date: 'EEE' }}</span>
                                     </span>
                                 </ion-row>
-                                <ion-row >
+                                <ion-row *ngIf="isError(giorno)">
                                     <span class="error"><br>Attenzione: giornata non compilata</span>
                                 </ion-row>
                             </ion-col>
                             <ion-col size="4">
-                                <span class="attributes">{{ viewOre(giorno) }}</span>
+                                <span   class="attributes">{{ viewOre(giorno) }}</span>
                             </ion-col>
                         </ion-row>
                     </ion-grid>
                 </div>
             </ion-list>
-    </ion-grid>    
+    <!-- </ion-grid>     -->
 </ion-content>
