Fix for asl2-219
- festival service

--- a/src/app/tab2/actions/gestione-presenze-gruppo/gestione-presenze-gruppo.page.scss
+++ b/src/app/tab2/actions/gestione-presenze-gruppo/gestione-presenze-gruppo.page.scss
@@ -30,6 +30,11 @@
     font-style: italic;
 }
 
+.validato {
+    font-size: 12px;
+    color: #A2ADB8;    
+}
+
 .item-container {
     .item {
         border-bottom: 1.2px dashed #5C6F82;
