--- a/src/app/tab2/actions/gestione-presenze-gruppo/gestione-presenze-gruppo.page.html
+++ b/src/app/tab2/actions/gestione-presenze-gruppo/gestione-presenze-gruppo.page.html
@@ -12,10 +12,10 @@
             </ion-col>            
         </ion-row>
         <ion-row>
-            <ion-col size="5">
+            <ion-col>
                 <span class="top-bar-attributes text-semibold">Ore svolte:</span><span class="top-bar-attributes-values">{{attivita.oreValidate}}/{{attivita.oreTotali}}</span>
             </ion-col>
-            <ion-col size="7">
+            <ion-col>
                 <span class="float-right">
                     <span class="top-bar-attributes text-semibold">Periodo:</span><span
                     class="top-bar-attributes-values">{{attivita.aa.dataInizio | date: 'dd/MM/yyyy' }} -
@@ -39,12 +39,15 @@
                             <ion-col size="8">
                                 <ion-row>
                                     <span [style.fontWeight]="fontWeight(giorno)" [style.color]="textColor(giorno)"
-                                        class="attributes ion-text-capitalize">{{ giorno.giornata | date: 'dd MMM' }} 
-                                        <span [style.fontWeight]="fontWeight(giorno)" [style.color]="textColor(giorno)" class="attributes ion-text-uppercase"> - {{ giorno.giornata | date: 'EEE' }}</span>
+                                        class="attributes ion-text-lowercase">{{ giorno.giornata | date: 'dd MMM' }} 
+                                        <span [style.fontWeight]="fontWeight(giorno)" [style.color]="textColor(giorno)" class="attributes ion-text-capitalize"> - {{ giorno.giornata | date: 'EEE' }}</span>
                                     </span>
                                 </ion-row>
                                 <ion-row *ngIf="isError(giorno)">
                                     <span class="error"><br>Attenzione: giornata non compilata</span>
+                                </ion-row>
+                                <ion-row *ngIf="giorno.verificata">
+                                    <span class="text-italic validato"><br>Validato</span>
                                 </ion-row>
                             </ion-col>
                             <ion-col size="4">
