--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -5,10 +5,11 @@
        font-size: 24px;
     }
     .istituto {
-        font-size: 16px;
+        font-size: 14px;
     }
     .icon {
-        font-size: 100px;
+        font-size: 128px;
+        color: #E9E9E9;
     }
     .link {
         color: #0073E6;
