Fix for asl2-221

--- a/src/app/tab2/actions/gestione-presenze-individuale-input/gestione-presenze-individuale-input.page.scss
+++ b/src/app/tab2/actions/gestione-presenze-individuale-input/gestione-presenze-individuale-input.page.scss
@@ -1,3 +1,20 @@
+.top-bar-attributes {
+    color: #0073E6;
+    font-size: 20px;
+}
+.top-bar-titolo {
+    color: #5C6F82;
+    font-size: 24px;
+}
+.progress-bar-determinate {
+    height: 7px;
+    --progress-background: #10D390;
+    --background: white;  
+}
+.attributes-2 {
+    color: #5C6F82;
+    font-size: 20px;
+}
 
 .titolo {
     color: #5C6F82;
@@ -8,55 +25,25 @@
     color: #5C6F82;
     font-size: 18px;
 }
-
-.attributes-2 {
-    color: #5C6F82;
-    font-size: 18px;
+.attributes-ore {
+    font-size: 25px;
 }
-
 .error {
-    font-size: 14px;
+    font-size: 13px;
     color: #FF667D;
-    font-style: italic;
 }
-
-.progress-bar-determinate {
-  height: 7px;
-  --progress-background: #10D390;
-  
-}
-
-.top-bar-attributes {
-    color: #0073E6;
-    font-size: 20px;
-    font-weight: bold;
-
-}
-
 .top-bar-attributes-values {
     color: #5C6F82;
     font-size: 20px;    
 }
-
-.top-bar-titolo {
-    color: #5C6F82;
-    font-size: 24px;
-    font-weight: bold;
-}
-
 .top-bar {
     background-color: #CCE6FF;
     padding-top: 24px;
 }
-
-
-
 .item-container {
-    
     .item {
          padding: 20px;
      }
-    
     .text-area {
         align-content: left;
         width: 100%;
