--- a/src/app/tab2/actions/gestione-presenze-individuale-input/gestione-presenze-individuale-input.page.html
+++ b/src/app/tab2/actions/gestione-presenze-individuale-input/gestione-presenze-individuale-input.page.html
@@ -1,21 +1,18 @@
-<ion-header>
+<ion-header *ngIf="attivita">
     <ion-toolbar>
         <ion-buttons slot="start">
             <ion-back-button defaultHref="home"></ion-back-button>
+            <span class="top-bar-attributes text-semibold ion-text-capitalize">{{attivita.aa.titolo}}</span>
         </ion-buttons>
     </ion-toolbar>
 </ion-header>
 <ion-content *ngIf="giorno && attivita" class="item-container">
     <ion-grid class="top-bar">
         <ion-row>
-            <ion-col><span class="top-bar-titolo">{{ giorno.giornata | date: 'dd/MM/yyyy' }}</span></ion-col>
-        </ion-row>
-        <ion-row>
+            <ion-col size="8"></ion-col>
             <ion-col>
-                <span class="float-right">
-                    <span class="top-bar-attributes">{{attivita.aa.titolo}}</span>
-                </span>
-            </ion-col>
+                <span class="float-right top-bar-titolo text-bold">{{ giorno.giornata | date: 'dd/MM/yyyy' }}</span>
+            </ion-col>            
         </ion-row>
         <ion-row>
             <ion-col>
@@ -35,7 +32,7 @@
             <span class="attributes-2">Ore svolte:</span>
         </ion-row>
         <ion-row>
-            <span (click)="showPicker(giorno)" [style.color]="textColor(giorno)" class="attributes-2" padding>{{ viewOre(giorno) }}</span>
+            <span (click)="showPicker(giorno)" [style.color]="textColor(giorno)" class="attributes-ore" padding>{{ viewOre(giorno) }}</span>
         </ion-row>
         <br>
         <ion-row>
