Fix for asl2-221

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -5,7 +5,7 @@
       <ion-icon class="icon" src="./assets/icon/landing-icon.svg"></ion-icon>
     </div>
     <div class="ion-padding">
-      <label class="heading-1">Benvenuto {{dataService.studenteNome }} &nbsp; {{ dataService.studenteCognome}}</label>
+      <label class="heading-1">Benvenuto {{dataService.studenteNome }} {{ dataService.studenteCognome}}</label>
     </div>
     <br>
     <div>
